# MACs

./: .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  SECURITY.md  test_polyval.sh
.github/workflows/: belt-mac.yml  blake2-mac.yml  cbc-mac.yml  cmac.yml  daa.yml  gmac.yml  hmac.yml  kmac.yml  pmac.yml  publish.yml  retail-mac.yml  workspace.yml
belt-mac/: CHANGELOG.md  Cargo.toml  README.md
belt-mac/benches/: mod.rs
belt-mac/src/: block_api.rs  lib.rs  utils.rs
belt-mac/tests/: mod.rs
belt-mac/tests/data/: belt-mac.blb  belt_mac_stb.blb
blake2-mac/: CHANGELOG.md  Cargo.toml  README.md
blake2-mac/src/: lib.rs
cbc-mac/: CHANGELOG.md  Cargo.toml  README.md
cbc-mac/benches/: mod.rs
cbc-mac/src/: block_api.rs  lib.rs
cmac/: CHANGELOG.md  Cargo.toml  README.md
cmac/benches/: aes128_cmac.rs  aes256_cmac.rs  mod.rs
cmac/src/: block_api.rs  double.rs  lib.rs
cmac/tests/: cavp_large.rs  gost.rs  lib.rs  mod.rs  nist.rs  wycheproof.rs
cmac/tests/data/: aes128.blb  aes192.blb  aes256.blb  cavp_aes128.blb  cavp_aes128_large.blb  cavp_aes192.blb  cavp_aes256.blb  cavp_tdes2.blb  cavp_tdes3.blb  cmac_aes128_cavp.blb  cmac_aes128_cavp_large.blb  cmac_aes128_nist.blb  cmac_aes128_wycheproof.blb  cmac_aes192_cavp.blb  cmac_aes192_nist.blb  cmac_aes192_wycheproof.blb  cmac_aes256_cavp.blb  cmac_aes256_nist.blb  cmac_aes256_wycheproof.blb  cmac_kuznyechik_gost.blb  cmac_magma_gost.blb  cmac_tdes2_cavp.blb  cmac_tdes3_cavp.blb  kuznyechik.blb  magma.blb  wycheproof-aes128.blb  wycheproof-aes192.blb  wycheproof-aes256.blb
daa/: CHANGELOG.md  Cargo.toml  README.md
daa/benches/: mod.rs
daa/src/: lib.rs
gmac/: CHANGELOG.md  Cargo.toml  README.md
gmac/src/: lib.rs
gmac/tests/: mod.rs
gmac/tests/data/: gmac_aes128.blb  gmac_aes192.blb  gmac_aes256.blb
hmac/: CHANGELOG.md  Cargo.toml  README.md
hmac/src/: block_api.rs  lib.rs  optim.rs  simple.rs  simple_reset.rs  utils.rs
hmac/tests/: lib.rs  mod.rs  simple.rs
hmac/tests/data/: hmac_md5_rfc2104.blb  hmac_sha1_wycheproof.blb  hmac_sha224_rfc4231.blb  hmac_sha256_rfc4231.blb  hmac_sha256_wycheproof.blb  hmac_sha384_rfc4231.blb  hmac_sha384_wycheproof.blb  hmac_sha512_rfc4231.blb  hmac_sha512_wycheproof.blb  hmac_streebog256_gost.blb  hmac_streebog512_gost.blb
kmac/: Cargo.toml  README.md
kmac/benches/: mod.rs
kmac/src/: encoding.rs  kmac.rs  lib.rs  traits.rs
kmac/tests/: kmac.rs  nist.rs
pmac/: CHANGELOG.md  Cargo.toml  README.md
pmac/benches/: aes128_pmac.rs  aes256_pmac.rs  mod.rs
pmac/src/: block_api.rs  double.rs  lib.rs
pmac/tests/: lib.rs  mod.rs
pmac/tests/data/: aes128.blb  aes192.blb  aes256.blb  pmac_aes128.blb  pmac_aes192.blb  pmac_aes256.blb
poly1305/: CHANGES.md  Cargo.toml  README.md
poly1305/benches/: poly1305.rs
poly1305/src/: lib.rs
poly1305/tests/: lib.rs
polyval/: CHANGES.md  Cargo.toml  README.md
polyval/benches/: polyval.rs
polyval/src/: lib.rs  tag.rs
polyval/src/field/: clmul.rs  mod.rs
polyval/src/field/backend/: mod.rs  pclmulqdq.rs  soft.rs
polyval/tests/: lib.rs
retail-mac/: CHANGELOG.md  Cargo.toml  README.md
retail-mac/benches/: mod.rs
retail-mac/src/: block_api.rs  lib.rs
