[workspace]
resolver = "3"
members = [
    "belt-mac",
    "cbc-mac",
    "cmac",
    "hmac",
    "pmac",
    "retail-mac",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/RustCrypto/traits/pull/1787
# https://github.com/RustCrypto/traits/pull/1799
digest = { git = "https://github.com/RustCrypto/traits" }
crypto-common = { git = "https://github.com/RustCrypto/traits" }

# https://github.com/RustCrypto/hashes/pull/678
streebog = { git = "https://github.com/RustCrypto/hashes" }
sha1 = { git = "https://github.com/RustCrypto/hashes" }
sha2 = { git = "https://github.com/RustCrypto/hashes" }
md-5 = { git = "https://github.com/RustCrypto/hashes" }
