[package]
name = "belt-mac"
version = "0.2.0-pre"
description = "MAC specified by the BelT standard"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/belt-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "belt-mac"]
categories = ["cryptography", "no-std"]

[dependencies]
belt-block = "0.2.0-pre.2"
cipher = "=0.5.0-pre.8"
digest = { version = "=0.11.0-pre.10", features = ["mac"] }

[dev-dependencies]
digest = { version = "=0.11.0-pre.10", features = ["dev"] }
hex-literal = "0.4"

[features]
std = ["digest/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
