[package]
name = "belt-mac"
version = "0.2.0-pre"
description = "MAC specified by the BelT standard"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/belt-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "belt-mac"]
categories = ["cryptography", "no-std"]

[dependencies]
belt-block = "0.2.0-rc.1"
cipher = "0.5.0-rc.3"
digest = { version = "0.11.0-rc.5", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
