[package]
name = "blake2-mac"
version = "0.1.0"
description = "MAC functionality of BLAKE2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blake2-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "blake2"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
crypto-mac = "0.12.0-pre"
blake2 = { version = "0.10", default-features = false }

[features]
std = ["crypto-mac/std"]
