[package]
name = "cbc-mac"
version = "0.2.0-pre.2"
description = "Implementation of Cipher Block Chaining Message Authentication Code (CBC-MAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
readme = "README.md"
documentation = "https://docs.rs/cbc-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "daa"]

[dependencies]
cipher = "=0.5.0-pre.7"
digest = { version = "=0.11.0-pre.9", features = ["mac"] }

[dev-dependencies]
digest = { version = "=0.11.0-pre.9", features = ["dev"] }
hex-literal = "0.4"

aes = "0.9.0-pre.2"
des = "0.9.0-pre.2"

[features]
std = ["digest/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
