[package]
name = "cbc-mac"
version = "0.2.0-rc.3"
description = "Implementation of Cipher Block Chaining Message Authentication Code (CBC-MAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/cbc-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "daa"]

[dependencies]
cipher = "0.5.0-rc.3"
digest = { version = "0.11.0-rc.5", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["dev"] }
hex-literal = "1"

aes = "0.9.0-rc.2"
des = "0.9.0-rc.2"

[features]
zeroize = ["cipher/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
