[package]
name = "cmac"
version = "0.8.0-pre.2"
description = "Generic implementation of Cipher-based Message Authentication Code"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"
readme = "README.md"
documentation = "https://docs.rs/cmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "cmac", "omac"]
categories = ["cryptography", "no-std"]
exclude = ["tests/cavp_large.rs", "tests/data/cavp_aes128_large.blb"]

[dependencies]
cipher = "=0.5.0-pre.7"
digest = { version = "=0.11.0-pre.9", features = ["mac"] }
dbl = "0.4.0-rc.1"

[dev-dependencies]
digest = { version = "=0.11.0-pre.9", features = ["dev"] }
hex-literal = "0.4"

aes = "0.9.0-pre.2"
des = "0.9.0-pre.2"
kuznyechik = "0.9.0-pre.2"
magma = "0.10.0-pre.2"

[features]
std = ["digest/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
