[package]
name = "cmac"
version = "0.8.0-rc.3"
description = "Generic implementation of Cipher-based Message Authentication Code"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/cmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "cmac", "omac"]
categories = ["cryptography", "no-std"]
exclude = ["tests/cavp_large.rs", "tests/data/cavp_aes128_large.blb"]

[dependencies]
cipher = "0.5.0-rc.3"
digest = { version = "0.11.0-rc.5", features = ["mac"] }
dbl = "0.5"

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["dev"] }
hex-literal = "1"

aes = "0.9.0-rc.2"
des = "0.9.0-rc.2"
kuznyechik = "0.9.0-rc.2"
magma = "0.10.0-rc.2"

[features]
zeroize = ["cipher/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
