[package]
name = "daa"
version = "0.3.0"
description = "Implementation of Data Authentication Algorithm (DAA)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/daa"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "daa", "fips"]
readme = "README.md"
edition = "2018"

[dependencies]
crypto-mac = { version = "0.9", features = ["block-cipher"] }
des = "0.5"

[dev-dependencies]
crypto-mac = { version = "0.9", features = ["dev"] }

[features]
std = ["crypto-mac/std"]
