[package]
name = "daa"
version = "0.6.0" # Also update html_root_url in lib.rs when bumping this
description = "Implementation of Data Authentication Algorithm (DAA)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/daa"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "daa", "fips"]
readme = "README.md"
edition = "2018"

[dependencies]
digest = { version = "0.10", features = ["mac"] }
des = "0.8"

[dev-dependencies]
digest = { version = "0.10", features = ["dev"] }
hex-literal = "0.2"

[features]
std = ["digest/std"]
