[package]
name = "hmac"
version = "0.13.0"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"
readme = "README.md"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "hmac", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.11", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
md-5 = { version = "0.11", default-features = false }
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false }
streebog = { version = "0.11", default-features = false }
hex-literal = "0.3.3"

[features]
std = ["digest/std"]
reset = [] # Enable ability to reset HMAC instances

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
