[package]
name = "hmac"
version = "0.13.0-pre.1"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "hmac", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.72"

[dependencies]
digest = { version = "=0.11.0-pre.7", features = ["mac"] }

[dev-dependencies]
digest = { version = "=0.11.0-pre.7", features = ["dev"] }
md-5 = { version = "=0.11.0-pre.2", default-features = false }
sha1 = { version = "=0.11.0-pre.2", default-features = false }
sha2 = { version = "=0.11.0-pre.2", default-features = false }
streebog = { version = "=0.11.0-pre.2", default-features = false }
hex-literal = "0.4"

[features]
std = ["digest/std"]
reset = [] # Enable ability to reset HMAC instances

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
