[package]
name = "kmac"
version = "0.1.0"
description = "Keccak Message Authentication Code (KMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/kmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "kmac", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
digest = { version = "0.11.0-rc.3", features = ["mac"] }
sha3 = "0.11.0-rc.3"

[dev-dependencies]
digest = { version = "0.11.0-rc.3", features = ["dev"] }
hex-literal = "1.1.0"
hex = "0.4.3"
