[package]
name = "kmac"
version = "0.1.0"
description = "Keccak Message Authentication Code (KMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/kmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "kmac", "digest"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
cshake = { git = "https://github.com/RustCrypto/hashes", branch = "master" }
digest = { version = "0.11.0", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.11.0", features = ["dev"] }
hex-literal = "1.1.0"
hex = "0.4.3"
