[package]
name = "pmac"
version = "0.8.0-pre.1"
description = "Generic implementation of Parallelizable Message Authentication Code"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"
readme = "README.md"
documentation = "https://docs.rs/pmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "pmac"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"
digest = { version = "=0.11.0-pre.9", features = ["mac"] }
dbl = "0.4.0-rc.0"

[dev-dependencies]
aes = "0.9.0-pre.2"
digest = { version = "=0.11.0-pre.9", features = ["dev"] }

[features]
std = ["digest/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
