[package]
name = "pmac"
version = "0.8.0-rc.3"
description = "Generic implementation of Parallelizable Message Authentication Code"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/pmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "pmac"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.3"
digest = { version = "0.11.0-rc.5", features = ["mac"] }
dbl = "0.5"

[dev-dependencies]
aes = "0.9.0-rc.2"
digest = { version = "0.11.0-rc.5", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize", "digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
