[package]
name = "pmac"
version = "0.8.0"
description = "Generic implementation of Parallelizable Message Authentication Code"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/pmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "pmac"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5"
digest = { version = "0.11", features = ["mac"] }
dbl = "0.5"

[dev-dependencies]
aes = "0.9"
digest = { version = "0.11", features = ["dev"] }

[features]
zeroize = ["cipher/zeroize", "digest/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
