[package]
name = "polyval"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "GHASH-like universal hash over GF(2^128)"
documentation = "https://docs.rs/polyval"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["aes-gcm-siv", "crypto", "ghash", "gcm", "universal-hashing"]
categories = ["cryptography", "no-std"]

[dependencies]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
