[package]
name = "retail-mac"
version = "0.1.0-pre.0"
description = "Implementation of Retail Message Authentication Code (Retail MAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/retail-mac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac"]

[dependencies]
cipher = "=0.5.0-pre.8"
digest = { version = "=0.11.0-pre.10", features = ["mac"] }

[dev-dependencies]
digest = { version = "=0.11.0-pre.10", features = ["dev"] }
hex-literal = "1"

aes = "0.9.0-pre.2"
des = "0.9.0-pre.2"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
